[package]
name = "dropshot-verified-body"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
github = [
  "hex",
  "sha2",
  "thiserror"
]

[dependencies]
async-trait = "0.1.83"
digest = "0.10.7"
dropshot = "0.15"
hex = { version = "0.4.3", optional = true }
hmac_ext = { package = "hmac", version = "0.12.1" }
http = "1"
hyper = "1"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = { version = "0.10.8", optional = true }
thiserror = { version = "2.0.6", optional = true }
tracing = "0.1.41"
